# MiniTensor

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
core/autograd/: autograd_activations.h  autograd_losses.h  autograd_ops.h  autograd_reduction.h  autograd_reductions.h  elementwise.h  losses.h
core/losses/: bce.h  losses.h  mae.h  mse.h
core/nn/: base.h
core/nn/activations/: activations.h  relu.h  sigmoid.h  softmax.h  tanh.h
core/nn/initializers/: base.h  constant_val.h  he_normal.h  initializers.h  xavier_uniform.h
core/nn/layers/: layers.h  linear.h
core/tensors/: tensor.h  tensor_broadcast.h  tensor_math.h  tensor_ops.h  tensor_reductions.h  tensors.h
examples/: binary_classification.py  one_feature_lr.py  softmax.py
minitensor/: __init__.py  backend.py  model.py  tensor.py  tensor_math.py
minitensor/activations/: __init__.py  relu.py  sigmoid.py  softmax.py  tanh.py
minitensor/layers/: linear.py
minitensor/losses/: __init__.py  bce.py  mae.h  mae.py  mse.py
minitensor/optims/: sgd.py
minitensor/tensors/: tensor.h  tensor_ops.h
minitensor_py/: tensor.py
python_binding/: bindings.cpp
src/losses/: mse.c  mse.h
src/tensors/: operations.c  tensor.h  tensor_ops.c  tensor_ops.h  types.c  types.h
